--- a/package.json
+++ b/package.json
@@ -1,51 +1,33 @@
 {
-    "name": "patreon-ts",
-    "version": "0.4.1",
-    "description": "All in One Patreon library for OAuth and API V2 interaction.",
-    "main": "dist/patreon.js",
-    "types": "dist/patreon.d.ts",
-    "prepublish": "tsc",
-    "dependencies": {
-        "dotenv": "^8.2.0",
-        "express": "^4.17.1",
-        "form-urlencoded": "^4.2.1",
-        "pg": "^8.5.1",
-        "request": "^2.88.2",
-        "request-promise-native": "^1.0.9",
-        "simple-oauth2": "^4.2.0",
-        "typescript-string-operations": "^1.4.1"
-    },
-    "devDependencies": {
-        "@types/express": "^4.17.9",
-        "@types/form-urlencoded": "^2.0.1",
-        "@types/node": "^14.14.19",
-        "@types/request": "^2.48.5",
-        "@types/request-promise-native": "^1.0.17",
-        "@types/simple-oauth2": "^4.1.0",
-        "@typescript-eslint/eslint-plugin": "^4.11.1",
-        "@typescript-eslint/parser": "^4.11.1",
-        "eslint": "^7.17.0",
-        "eslint-config-google": "^0.14.0",
-        "ts-node": "^9.1.1",
-        "typescript": "^4.1.3"
-    },
-    "scripts": {
-        "start": "ts-node src/patreon.ts",
-        "start:example": "ts-node --project examples/redirect-flow/tsconfig.json examples/redirect-flow/src/index.ts"
-    },
-    "keywords": [
-        "Patreon",
-        "API",
-        "Library",
-        "OAuth2"
-    ],
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/Zageron/patreonts"
-    },
-    "author": "Zageron",
-    "license": "MIT",
-    "files": [
-        "dist/**"
-    ]
+  "name": "patreon-ts",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "main": "./dist/patreon-ts.umd.cjs",
+  "module": "./dist/patreon-ts.js",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/patreon-ts.js",
+      "require": "./dist/patreon-ts.umd.cjs"
+    }
+  },
+  "files": [
+    "dist"
+  ],
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "simple-oauth2": "^5.0.0"
+  },
+  "devDependencies": {
+    "@types/node": "^20.5.6",
+    "@types/simple-oauth2": "^5.0.4",
+    "typescript": "^5.2.2",
+    "vite": "^4.4.5",
+    "vite-plugin-dts": "^3.5.2"
+  }
 }
