--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "main": "./dist/patreon-ts.umd.cjs",
-  "module": "./dist/patreon-ts.js",
+  "main": "./dist/index.umd.cjs",
+  "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/patreon-ts.js",
-      "require": "./dist/patreon-ts.umd.cjs"
+      "import": "./dist/index.js",
+      "require": "./dist/index.umd.cjs"
     }
   },
   "files": [
@@ -27,7 +27,7 @@
     "@types/node": "^20.5.6",
     "@types/simple-oauth2": "^5.0.4",
     "typescript": "^5.2.2",
-    "vite": "^4.4.5",
+    "vite": "^5.2.6",
     "vite-plugin-dts": "^3.5.2"
   }
 }
